# movie-emotion

./: .env.example  .gitignore  Dockerfile  README.md  TZ.md  docker-compose.yml  manage.py  pyproject.toml
emotions/: admin.py  enums.py  models.py
emotions/migrations/: 0001_initial.py
films/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
films/management/commands/: load_initial_data.py
films/migrations/: 0001_initial.py  0002_initial.py
movie_emotion/: asgi.py  config.py  settings.py  urls.py  wsgi.py
notifications/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
templates/: base.html
templates/films/: detail.html  list.html
templates/notifications/: notification_list.html  subscription_create.html  subscription_delete.html  subscription_list.html
templates/users/: confirm.html  login.html  profile.html  profile_edit.html  register.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_emailconfirmation.py
